[MathJax] Fix rendering Mathjax on Jekyll
Reference - https://mkkim85.github.io/blog-apply-mathjax-to-jekyll-and-github-pages/

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ locale:      ko_KR
 future:      true
 highlighter: rouge
 markdown:    kramdown
+lsi: false
+incremental: false
 sass:
   sass_dir: _sass
   style: compressed
