[link format] fix permalink

--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ sass:
   style: compressed
 
 
-permalink:   /:categories/:year/:month/:day/:title/
+permalink:   /:categories/:year/:month/:day/:title
 
 # Amount of post to show on home page
 paginate: 3
