[config] update bio

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,15 @@ owner:
   name:           MG
   site:           https://github.com/mg729
   avatar:         images/avatar.jpg
-  bio:            "Be useful and Be kind\nEVERY DAY IS A NEW DAY\nGetting better every day\nStand-up\nSelf-made\nSelf-sufficient\nIf you can't explain it simply, you don't understand it well enough\nKEEP GOING"
+  bio:            "Be useful and Be kind
+  EVERY DAY IS A NEW DAY
+  Getting better every day
+  Stand-up
+  Self-made
+  Self-sufficient
+  If you can't explain it simply, you don't understand it well enough
+  KEEP GOING
+  Here, NOW"
   email:          iammg729@gmail.com
   github:         mg729
 
