--- a/_config.yml
+++ b/_config.yml
@@ -31,14 +31,14 @@ owner:
   name:           MG
   site:           https://github.com/mg729
   avatar:         images/avatar.jpg
-  bio:            "Be useful and Be kind
-  EVERY DAY IS A NEW DAY
-  Getting better every day
-  Stand-up
-  Self-made
-  Self-sufficient
-  If you can't explain it simply, you don't understand it well enough
-  KEEP GOING
+  bio:            "Be useful and Be kind *\n\n
+  EVERY DAY IS A NEW DAY *\n\n
+  Getting better every day *\n\n
+  Stand-up *\n\n
+  Self-made *\n\n
+  Self-sufficient *\n\n
+  If you can't explain it simply, you don't understand it well enough *\n\n
+  KEEP GOING *\n\n
   Here, NOW"
   email:          iammg729@gmail.com
   github:         mg729
