--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ logo:             images/logo.png # logo visible in the topbar
 excerpt_separator: <!--more-->
 
 #site domain
-url: https://mg729.github.io
+url: https://sujinsjlee.github.io
 
 # menu
 menu:
@@ -28,8 +28,8 @@ menu:
 
 # Owner/author information
 owner:
-  name:           MG
-  site:           https://github.com/mg729
+  name:           SujinLee
+  site:           https://github.com/sujinsjlee
   avatar:         images/avatar.jpg
   bio:            "Be useful and Be kind *\n\n
   EVERY DAY IS A NEW DAY *\n\n
@@ -40,14 +40,14 @@ owner:
   If you can't explain it simply, you don't understand it well enough *\n\n
   KEEP GOING *\n\n
   Here, NOW"
-  email:          iammg729@gmail.com
-  github:         mg729
+  email:          sjcan2729@gmail.com
+  github:         sujinsjlee
 
 social:
   - title: "github"
-    url: "https://github.com/mg729"
+    url: "https://github.com/sujinsjlee"
   - title: "linkedin"
-    url: "https://www.linkedin.com/in/sujin-lee-b87507221/"
+    url: "https://www.linkedin.com/in/sujinsjlee/"
 #  - title: "youtube"
 #    url: "https://www.youtube.com/channel/UCfnSek-9HPWOx5e2pH7VFgg"
 
